# ChangeLog for x11-misc/virtualgl
# Copyright 1999-2010 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
# $Header: $

  25 May 2011; Steven Peckins <sep16@psu.edu> +virtualgl-2.2.1.ebuild:
  Version bump; updated to use new make variables.

  25 May 2011; Steven Peckins <sep16@psu.edu> virtualgl-2.2.ebuild:
  Fixed SRC_URI for libjpeg-turbo.

  15 Mar 2011; Steven Peckins <sep16@psu.edu> +virtualgl-2.2.ebuild:
  New ebuild for Bug #313305