@@ -2,7 +2,9 @@ These are the local ebuilds I have had to create in the course of my work.  As s
 
 media-libs/openslide
 	C library that provides a simple interface to read whole-slide images, aka virtual slides
+
 sci-biology/structure
 	Free software package for using multi-locus genotype data to investigate population structure
+
 x11-misc/virtualgl
 	Run OpenGL applications on remote display software with full 3D hardware acceleration
