@@ -1,5 +1,8 @@
 AUX vgl.confd 111 RMD160 95c9e9477ea35d2745ffd097fa660abfb640918d SHA1 0724c34a9238ba496551f777dbc1f459c743db29 SHA256 26162768af3f99303536a769d9618dfb72fa713bad44a19004894545f615dc56
 AUX vgl.initd 601 RMD160 ed66860590d64463cffc8d8120b55afcfd5a5639 SHA1 a96d40610818464a512e16ad34f2879d6ff6b279 SHA256 bcee9431d34545613d1db35e97c8418d840def8096979e9f828fc2ae9b6a9610
 DIST VirtualGL-2.2.1.tar.gz 2713463 RMD160 0889d9d325fe2b8956be881f09cb7e077060533b SHA1 3211db5a8c503c008b9b7bb0800814ed02a78be5 SHA256 0379d8c2ae6fa881642e9dc6d75db3646a041e13c793b09d24afd063f35c31ff
+DIST VirtualGL-2.2.90.tar.gz 2759531 RMD160 754260f050c2d4013caf46b3d29e8c710dbbcfc5 SHA1 f5aabec45ced944b7957e4fd21d433193a93ca22 SHA256 eaf856556a4f049de854fb5a51617f374e07cb3c0c777dbac10c4714f56ff939
+DIST libjpeg-turbo-1.1.0.tar.gz 1448466 RMD160 66cb9a5b2abafb69b980b1d09159dd68cfbb7a61 SHA1 e36c29b955cdce7f497ea83ed301e9129eb23e1f SHA256 1e24fd7c58b64f4c0f5f559d88d43bbe40e47000a573ad215e47f75da88ac244
 DIST libjpeg-turbo-1.1.1.tar.gz 1444529 RMD160 d70979dabe05b8eb74cddaaf0ffbd4b9fbaba41a SHA1 131cef514c34e0b3f6952000968796d5a87a59e9 SHA256 553b1f5a968fb9efc089623ed99be2aa6bc21586be92eb04848489c91a63f1e2
 EBUILD virtualgl-2.2.1.ebuild 2942 RMD160 f4ee629e83ad4f2b206335997a03450abdc010a0 SHA1 98b442972e5ac35ffe6f32d0e6dc1ec522d370d0 SHA256 8fb881fb10e84f1468a3749db672449932bd29b53970c605affc0d4708a0d547
+EBUILD virtualgl-2.2.90.ebuild 1791 RMD160 3b3c9df8a3e92c4dab0387946fe4c4adbfb2a376 SHA1 5c57f566023b8f4f3da10f26896538d8db432edb SHA256 d7ccb562c2d88b7283820ea839862ae6ad874d84de55496b35b7428eca4cb4d5
